parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSOLUTE
    AND
    ASM
    BREAK
    CASE
    CONSTRUCTOR
    CONTINUE
    DESTRUCTOR
    DIV
    DOWNTO
    EXTERNAL
    FILE
    FORWARD
    GOTO
    IMPLEMENTATION
    IN
    INHERITED
    INLINE
    INTERFACE
    INTERRUPT
    LABEL
    MOD
    NIL
    NOT
    ON
    OPERATOR
    OR
    PACKED
    RECORD
    REPEAT
    SELF
    SET
    SHL
    SHR
    SINGLE_COMMENT
    UNIT
    UNTIL
    WHILE
    WITH
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT
Rule 2     uses_clause -> USES id_list SEMICOLON
Rule 3     uses_clause -> empty
Rule 4     id_list -> ID
Rule 5     id_list -> id_list COMMA ID
Rule 6     declaration_sections -> declaration_sections section
Rule 7     declaration_sections -> empty
Rule 8     section -> const_section
Rule 9     section -> type_section
Rule 10    section -> var_section
Rule 11    section -> procedure_declaration
Rule 12    section -> function_declaration
Rule 13    const_section -> CONST const_list
Rule 14    const_list -> const_list ID EQUALS expression SEMICOLON
Rule 15    const_list -> ID EQUALS expression SEMICOLON
Rule 16    type_section -> TYPE type_list
Rule 17    type_list -> type_list ID EQUALS type_specifier SEMICOLON
Rule 18    type_list -> ID EQUALS type_specifier SEMICOLON
Rule 19    var_section -> VAR var_list
Rule 20    var_list -> var_list id_list COLON type_specifier SEMICOLON
Rule 21    var_list -> id_list COLON type_specifier SEMICOLON
Rule 22    type_specifier -> type_base
Rule 23    type_specifier -> ARRAY LBRACKET range RBRACKET OF type_base
Rule 24    type_specifier -> STRING LBRACKET NUMBER RBRACKET
Rule 25    type_base -> INTEGER
Rule 26    type_base -> REAL
Rule 27    type_base -> CHAR
Rule 28    type_base -> BOOLEAN
Rule 29    range -> NUMBER DOT DOT NUMBER
Rule 30    procedure_declaration -> PROCEDURE ID LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON
Rule 31    function_declaration -> FUNCTION ID LPAREN args RPAREN COLON type_base SEMICOLON compound_stmt SEMICOLON
Rule 32    compound_stmt -> BEGIN statement_list END
Rule 33    statement_list -> statement_list statement
Rule 34    statement_list -> statement
Rule 35    statement_list -> empty
Rule 36    statement -> call_stmt SEMICOLON
Rule 37    statement -> assignment_stmt SEMICOLON
Rule 38    statement -> compound_stmt
Rule 39    statement -> if_stmt
Rule 40    statement -> for_stmt
Rule 41    if_stmt -> IF LPAREN expression RPAREN THEN statement
Rule 42    if_stmt -> IF LPAREN expression RPAREN THEN statement ELSE statement
Rule 43    for_stmt -> FOR ID ASSIGN expression TO expression DO statement
Rule 44    assignment_stmt -> ID ASSIGN expression
Rule 45    call_stmt -> ID LPAREN expression_list RPAREN
Rule 46    call_stmt -> ID
Rule 47    args -> arg_list
Rule 48    args -> empty
Rule 49    arg_list -> ID COLON type_base
Rule 50    arg_list -> arg_list SEMICOLON ID COLON type_base
Rule 51    expression_list -> expression_list COMMA expression
Rule 52    expression_list -> expression
Rule 53    expression -> term
Rule 54    expression -> expression PLUS term
Rule 55    expression -> expression MINUS term
Rule 56    expression -> expression GREATER term
Rule 57    expression -> expression LESS term
Rule 58    expression -> expression GREATEREQUAL term
Rule 59    expression -> expression LESSEQUAL term
Rule 60    expression -> expression NOTEQUAL term
Rule 61    term -> factor
Rule 62    term -> term TIMES factor
Rule 63    term -> term DIVIDE factor
Rule 64    factor -> NUMBER
Rule 65    factor -> STRING
Rule 66    factor -> call_stmt
Rule 67    factor -> LPAREN expression RPAREN
Rule 68    empty -> <empty>

Terminals, with rules where they appear

ABSOLUTE             : 
AND                  : 
ARRAY                : 23
ASM                  : 
ASSIGN               : 43 44
BEGIN                : 32
BOOLEAN              : 28
BREAK                : 
CASE                 : 
CHAR                 : 27
COLON                : 20 21 31 49 50
COMMA                : 5 51
CONST                : 13
CONSTRUCTOR          : 
CONTINUE             : 
DESTRUCTOR           : 
DIV                  : 
DIVIDE               : 63
DO                   : 43
DOT                  : 1 29 29
DOWNTO               : 
ELSE                 : 42
END                  : 32
EQUALS               : 14 15 17 18
EXTERNAL             : 
FILE                 : 
FOR                  : 43
FORWARD              : 
FUNCTION             : 31
GOTO                 : 
GREATER              : 56
GREATEREQUAL         : 58
ID                   : 1 4 5 14 15 17 18 30 31 43 44 45 46 49 50
IF                   : 41 42
IMPLEMENTATION       : 
IN                   : 
INHERITED            : 
INLINE               : 
INTEGER              : 25
INTERFACE            : 
INTERRUPT            : 
LABEL                : 
LBRACKET             : 23 24
LESS                 : 57
LESSEQUAL            : 59
LPAREN               : 30 31 41 42 45 67
MINUS                : 55
MOD                  : 
NIL                  : 
NOT                  : 
NOTEQUAL             : 60
NUMBER               : 24 29 29 64
OF                   : 23
ON                   : 
OPERATOR             : 
OR                   : 
PACKED               : 
PLUS                 : 54
PROCEDURE            : 30
PROGRAM              : 1
RBRACKET             : 23 24
REAL                 : 26
RECORD               : 
REPEAT               : 
RPAREN               : 30 31 41 42 45 67
SELF                 : 
SEMICOLON            : 1 2 14 15 17 18 20 21 30 30 31 31 36 37 50
SET                  : 
SHL                  : 
SHR                  : 
SINGLE_COMMENT       : 
STRING               : 24 65
THEN                 : 41 42
TIMES                : 62
TO                   : 43
TYPE                 : 16
UNIT                 : 
UNTIL                : 
USES                 : 2
VAR                  : 19
WHILE                : 
WITH                 : 
XOR                  : 
error                : 

Nonterminals, with rules where they appear

arg_list             : 47 50
args                 : 30 31
assignment_stmt      : 37
call_stmt            : 36 66
compound_stmt        : 1 30 31 38
const_list           : 13 14
const_section        : 8
declaration_sections : 1 6
empty                : 3 7 35 48
expression           : 14 15 41 42 43 43 44 51 52 54 55 56 57 58 59 60 67
expression_list      : 45 51
factor               : 61 62 63
for_stmt             : 40
function_declaration : 12
id_list              : 2 5 20 21
if_stmt              : 39
procedure_declaration : 11
program              : 0
range                : 23
section              : 6
statement            : 33 34 41 42 42 43
statement_list       : 32 33
term                 : 53 54 55 56 57 58 59 60 62 63
type_base            : 22 23 31 49 50
type_list            : 16 17
type_section         : 9
type_specifier       : 17 18 20 21
uses_clause          : 1
var_list             : 19 20
var_section          : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON uses_clause declaration_sections compound_stmt DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON uses_clause declaration_sections compound_stmt DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . uses_clause declaration_sections compound_stmt DOT
    (2) uses_clause -> . USES id_list SEMICOLON
    (3) uses_clause -> . empty
    (68) empty -> .

    USES            shift and go to state 6
    BEGIN           reduce using rule 68 (empty -> .)
    CONST           reduce using rule 68 (empty -> .)
    TYPE            reduce using rule 68 (empty -> .)
    VAR             reduce using rule 68 (empty -> .)
    PROCEDURE       reduce using rule 68 (empty -> .)
    FUNCTION        reduce using rule 68 (empty -> .)

    uses_clause                    shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON uses_clause . declaration_sections compound_stmt DOT
    (6) declaration_sections -> . declaration_sections section
    (7) declaration_sections -> . empty
    (68) empty -> .

    BEGIN           reduce using rule 68 (empty -> .)
    CONST           reduce using rule 68 (empty -> .)
    TYPE            reduce using rule 68 (empty -> .)
    VAR             reduce using rule 68 (empty -> .)
    PROCEDURE       reduce using rule 68 (empty -> .)
    FUNCTION        reduce using rule 68 (empty -> .)

    declaration_sections           shift and go to state 8
    empty                          shift and go to state 9

state 6

    (2) uses_clause -> USES . id_list SEMICOLON
    (4) id_list -> . ID
    (5) id_list -> . id_list COMMA ID

    ID              shift and go to state 11

    id_list                        shift and go to state 10

state 7

    (3) uses_clause -> empty .

    BEGIN           reduce using rule 3 (uses_clause -> empty .)
    CONST           reduce using rule 3 (uses_clause -> empty .)
    TYPE            reduce using rule 3 (uses_clause -> empty .)
    VAR             reduce using rule 3 (uses_clause -> empty .)
    PROCEDURE       reduce using rule 3 (uses_clause -> empty .)
    FUNCTION        reduce using rule 3 (uses_clause -> empty .)


state 8

    (1) program -> PROGRAM ID SEMICOLON uses_clause declaration_sections . compound_stmt DOT
    (6) declaration_sections -> declaration_sections . section
    (32) compound_stmt -> . BEGIN statement_list END
    (8) section -> . const_section
    (9) section -> . type_section
    (10) section -> . var_section
    (11) section -> . procedure_declaration
    (12) section -> . function_declaration
    (13) const_section -> . CONST const_list
    (16) type_section -> . TYPE type_list
    (19) var_section -> . VAR var_list
    (30) procedure_declaration -> . PROCEDURE ID LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON
    (31) function_declaration -> . FUNCTION ID LPAREN args RPAREN COLON type_base SEMICOLON compound_stmt SEMICOLON

    BEGIN           shift and go to state 14
    CONST           shift and go to state 20
    TYPE            shift and go to state 21
    VAR             shift and go to state 22
    PROCEDURE       shift and go to state 23
    FUNCTION        shift and go to state 24

    compound_stmt                  shift and go to state 12
    section                        shift and go to state 13
    const_section                  shift and go to state 15
    type_section                   shift and go to state 16
    var_section                    shift and go to state 17
    procedure_declaration          shift and go to state 18
    function_declaration           shift and go to state 19

state 9

    (7) declaration_sections -> empty .

    BEGIN           reduce using rule 7 (declaration_sections -> empty .)
    CONST           reduce using rule 7 (declaration_sections -> empty .)
    TYPE            reduce using rule 7 (declaration_sections -> empty .)
    VAR             reduce using rule 7 (declaration_sections -> empty .)
    PROCEDURE       reduce using rule 7 (declaration_sections -> empty .)
    FUNCTION        reduce using rule 7 (declaration_sections -> empty .)


state 10

    (2) uses_clause -> USES id_list . SEMICOLON
    (5) id_list -> id_list . COMMA ID

    SEMICOLON       shift and go to state 25
    COMMA           shift and go to state 26


state 11

    (4) id_list -> ID .

    SEMICOLON       reduce using rule 4 (id_list -> ID .)
    COMMA           reduce using rule 4 (id_list -> ID .)
    COLON           reduce using rule 4 (id_list -> ID .)


state 12

    (1) program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt . DOT

    DOT             shift and go to state 27


state 13

    (6) declaration_sections -> declaration_sections section .

    BEGIN           reduce using rule 6 (declaration_sections -> declaration_sections section .)
    CONST           reduce using rule 6 (declaration_sections -> declaration_sections section .)
    TYPE            reduce using rule 6 (declaration_sections -> declaration_sections section .)
    VAR             reduce using rule 6 (declaration_sections -> declaration_sections section .)
    PROCEDURE       reduce using rule 6 (declaration_sections -> declaration_sections section .)
    FUNCTION        reduce using rule 6 (declaration_sections -> declaration_sections section .)


state 14

    (32) compound_stmt -> BEGIN . statement_list END
    (33) statement_list -> . statement_list statement
    (34) statement_list -> . statement
    (35) statement_list -> . empty
    (36) statement -> . call_stmt SEMICOLON
    (37) statement -> . assignment_stmt SEMICOLON
    (38) statement -> . compound_stmt
    (39) statement -> . if_stmt
    (40) statement -> . for_stmt
    (68) empty -> .
    (45) call_stmt -> . ID LPAREN expression_list RPAREN
    (46) call_stmt -> . ID
    (44) assignment_stmt -> . ID ASSIGN expression
    (32) compound_stmt -> . BEGIN statement_list END
    (41) if_stmt -> . IF LPAREN expression RPAREN THEN statement
    (42) if_stmt -> . IF LPAREN expression RPAREN THEN statement ELSE statement
    (43) for_stmt -> . FOR ID ASSIGN expression TO expression DO statement

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for BEGIN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    END             reduce using rule 68 (empty -> .)
    ID              shift and go to state 36
    BEGIN           shift and go to state 14
    IF              shift and go to state 37
    FOR             shift and go to state 38

  ! ID              [ reduce using rule 68 (empty -> .) ]
  ! BEGIN           [ reduce using rule 68 (empty -> .) ]
  ! IF              [ reduce using rule 68 (empty -> .) ]
  ! FOR             [ reduce using rule 68 (empty -> .) ]

    statement_list                 shift and go to state 28
    statement                      shift and go to state 29
    empty                          shift and go to state 30
    call_stmt                      shift and go to state 31
    assignment_stmt                shift and go to state 32
    compound_stmt                  shift and go to state 33
    if_stmt                        shift and go to state 34
    for_stmt                       shift and go to state 35

state 15

    (8) section -> const_section .

    BEGIN           reduce using rule 8 (section -> const_section .)
    CONST           reduce using rule 8 (section -> const_section .)
    TYPE            reduce using rule 8 (section -> const_section .)
    VAR             reduce using rule 8 (section -> const_section .)
    PROCEDURE       reduce using rule 8 (section -> const_section .)
    FUNCTION        reduce using rule 8 (section -> const_section .)


state 16

    (9) section -> type_section .

    BEGIN           reduce using rule 9 (section -> type_section .)
    CONST           reduce using rule 9 (section -> type_section .)
    TYPE            reduce using rule 9 (section -> type_section .)
    VAR             reduce using rule 9 (section -> type_section .)
    PROCEDURE       reduce using rule 9 (section -> type_section .)
    FUNCTION        reduce using rule 9 (section -> type_section .)


state 17

    (10) section -> var_section .

    BEGIN           reduce using rule 10 (section -> var_section .)
    CONST           reduce using rule 10 (section -> var_section .)
    TYPE            reduce using rule 10 (section -> var_section .)
    VAR             reduce using rule 10 (section -> var_section .)
    PROCEDURE       reduce using rule 10 (section -> var_section .)
    FUNCTION        reduce using rule 10 (section -> var_section .)


state 18

    (11) section -> procedure_declaration .

    BEGIN           reduce using rule 11 (section -> procedure_declaration .)
    CONST           reduce using rule 11 (section -> procedure_declaration .)
    TYPE            reduce using rule 11 (section -> procedure_declaration .)
    VAR             reduce using rule 11 (section -> procedure_declaration .)
    PROCEDURE       reduce using rule 11 (section -> procedure_declaration .)
    FUNCTION        reduce using rule 11 (section -> procedure_declaration .)


state 19

    (12) section -> function_declaration .

    BEGIN           reduce using rule 12 (section -> function_declaration .)
    CONST           reduce using rule 12 (section -> function_declaration .)
    TYPE            reduce using rule 12 (section -> function_declaration .)
    VAR             reduce using rule 12 (section -> function_declaration .)
    PROCEDURE       reduce using rule 12 (section -> function_declaration .)
    FUNCTION        reduce using rule 12 (section -> function_declaration .)


state 20

    (13) const_section -> CONST . const_list
    (14) const_list -> . const_list ID EQUALS expression SEMICOLON
    (15) const_list -> . ID EQUALS expression SEMICOLON

    ID              shift and go to state 40

    const_list                     shift and go to state 39

state 21

    (16) type_section -> TYPE . type_list
    (17) type_list -> . type_list ID EQUALS type_specifier SEMICOLON
    (18) type_list -> . ID EQUALS type_specifier SEMICOLON

    ID              shift and go to state 42

    type_list                      shift and go to state 41

state 22

    (19) var_section -> VAR . var_list
    (20) var_list -> . var_list id_list COLON type_specifier SEMICOLON
    (21) var_list -> . id_list COLON type_specifier SEMICOLON
    (4) id_list -> . ID
    (5) id_list -> . id_list COMMA ID

    ID              shift and go to state 11

    var_list                       shift and go to state 43
    id_list                        shift and go to state 44

state 23

    (30) procedure_declaration -> PROCEDURE . ID LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON

    ID              shift and go to state 45


state 24

    (31) function_declaration -> FUNCTION . ID LPAREN args RPAREN COLON type_base SEMICOLON compound_stmt SEMICOLON

    ID              shift and go to state 46


state 25

    (2) uses_clause -> USES id_list SEMICOLON .

    BEGIN           reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    CONST           reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    TYPE            reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    VAR             reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    PROCEDURE       reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)
    FUNCTION        reduce using rule 2 (uses_clause -> USES id_list SEMICOLON .)


state 26

    (5) id_list -> id_list COMMA . ID

    ID              shift and go to state 47


state 27

    (1) program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON uses_clause declaration_sections compound_stmt DOT .)


state 28

    (32) compound_stmt -> BEGIN statement_list . END
    (33) statement_list -> statement_list . statement
    (36) statement -> . call_stmt SEMICOLON
    (37) statement -> . assignment_stmt SEMICOLON
    (38) statement -> . compound_stmt
    (39) statement -> . if_stmt
    (40) statement -> . for_stmt
    (45) call_stmt -> . ID LPAREN expression_list RPAREN
    (46) call_stmt -> . ID
    (44) assignment_stmt -> . ID ASSIGN expression
    (32) compound_stmt -> . BEGIN statement_list END
    (41) if_stmt -> . IF LPAREN expression RPAREN THEN statement
    (42) if_stmt -> . IF LPAREN expression RPAREN THEN statement ELSE statement
    (43) for_stmt -> . FOR ID ASSIGN expression TO expression DO statement

    END             shift and go to state 48
    ID              shift and go to state 36
    BEGIN           shift and go to state 14
    IF              shift and go to state 37
    FOR             shift and go to state 38

    statement                      shift and go to state 49
    call_stmt                      shift and go to state 31
    assignment_stmt                shift and go to state 32
    compound_stmt                  shift and go to state 33
    if_stmt                        shift and go to state 34
    for_stmt                       shift and go to state 35

state 29

    (34) statement_list -> statement .

    END             reduce using rule 34 (statement_list -> statement .)
    ID              reduce using rule 34 (statement_list -> statement .)
    BEGIN           reduce using rule 34 (statement_list -> statement .)
    IF              reduce using rule 34 (statement_list -> statement .)
    FOR             reduce using rule 34 (statement_list -> statement .)


state 30

    (35) statement_list -> empty .

    END             reduce using rule 35 (statement_list -> empty .)
    ID              reduce using rule 35 (statement_list -> empty .)
    BEGIN           reduce using rule 35 (statement_list -> empty .)
    IF              reduce using rule 35 (statement_list -> empty .)
    FOR             reduce using rule 35 (statement_list -> empty .)


state 31

    (36) statement -> call_stmt . SEMICOLON

    SEMICOLON       shift and go to state 50


state 32

    (37) statement -> assignment_stmt . SEMICOLON

    SEMICOLON       shift and go to state 51


state 33

    (38) statement -> compound_stmt .

    END             reduce using rule 38 (statement -> compound_stmt .)
    ID              reduce using rule 38 (statement -> compound_stmt .)
    BEGIN           reduce using rule 38 (statement -> compound_stmt .)
    IF              reduce using rule 38 (statement -> compound_stmt .)
    FOR             reduce using rule 38 (statement -> compound_stmt .)
    ELSE            reduce using rule 38 (statement -> compound_stmt .)


state 34

    (39) statement -> if_stmt .

    END             reduce using rule 39 (statement -> if_stmt .)
    ID              reduce using rule 39 (statement -> if_stmt .)
    BEGIN           reduce using rule 39 (statement -> if_stmt .)
    IF              reduce using rule 39 (statement -> if_stmt .)
    FOR             reduce using rule 39 (statement -> if_stmt .)
    ELSE            reduce using rule 39 (statement -> if_stmt .)


state 35

    (40) statement -> for_stmt .

    END             reduce using rule 40 (statement -> for_stmt .)
    ID              reduce using rule 40 (statement -> for_stmt .)
    BEGIN           reduce using rule 40 (statement -> for_stmt .)
    IF              reduce using rule 40 (statement -> for_stmt .)
    FOR             reduce using rule 40 (statement -> for_stmt .)
    ELSE            reduce using rule 40 (statement -> for_stmt .)


state 36

    (45) call_stmt -> ID . LPAREN expression_list RPAREN
    (46) call_stmt -> ID .
    (44) assignment_stmt -> ID . ASSIGN expression

    LPAREN          shift and go to state 52
    SEMICOLON       reduce using rule 46 (call_stmt -> ID .)
    ASSIGN          shift and go to state 53


state 37

    (41) if_stmt -> IF . LPAREN expression RPAREN THEN statement
    (42) if_stmt -> IF . LPAREN expression RPAREN THEN statement ELSE statement

    LPAREN          shift and go to state 54


state 38

    (43) for_stmt -> FOR . ID ASSIGN expression TO expression DO statement

    ID              shift and go to state 55


state 39

    (13) const_section -> CONST const_list .
    (14) const_list -> const_list . ID EQUALS expression SEMICOLON

    BEGIN           reduce using rule 13 (const_section -> CONST const_list .)
    CONST           reduce using rule 13 (const_section -> CONST const_list .)
    TYPE            reduce using rule 13 (const_section -> CONST const_list .)
    VAR             reduce using rule 13 (const_section -> CONST const_list .)
    PROCEDURE       reduce using rule 13 (const_section -> CONST const_list .)
    FUNCTION        reduce using rule 13 (const_section -> CONST const_list .)
    ID              shift and go to state 56


state 40

    (15) const_list -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 57


state 41

    (16) type_section -> TYPE type_list .
    (17) type_list -> type_list . ID EQUALS type_specifier SEMICOLON

    BEGIN           reduce using rule 16 (type_section -> TYPE type_list .)
    CONST           reduce using rule 16 (type_section -> TYPE type_list .)
    TYPE            reduce using rule 16 (type_section -> TYPE type_list .)
    VAR             reduce using rule 16 (type_section -> TYPE type_list .)
    PROCEDURE       reduce using rule 16 (type_section -> TYPE type_list .)
    FUNCTION        reduce using rule 16 (type_section -> TYPE type_list .)
    ID              shift and go to state 58


state 42

    (18) type_list -> ID . EQUALS type_specifier SEMICOLON

    EQUALS          shift and go to state 59


state 43

    (19) var_section -> VAR var_list .
    (20) var_list -> var_list . id_list COLON type_specifier SEMICOLON
    (4) id_list -> . ID
    (5) id_list -> . id_list COMMA ID

    BEGIN           reduce using rule 19 (var_section -> VAR var_list .)
    CONST           reduce using rule 19 (var_section -> VAR var_list .)
    TYPE            reduce using rule 19 (var_section -> VAR var_list .)
    VAR             reduce using rule 19 (var_section -> VAR var_list .)
    PROCEDURE       reduce using rule 19 (var_section -> VAR var_list .)
    FUNCTION        reduce using rule 19 (var_section -> VAR var_list .)
    ID              shift and go to state 11

    id_list                        shift and go to state 60

state 44

    (21) var_list -> id_list . COLON type_specifier SEMICOLON
    (5) id_list -> id_list . COMMA ID

    COLON           shift and go to state 61
    COMMA           shift and go to state 26


state 45

    (30) procedure_declaration -> PROCEDURE ID . LPAREN args RPAREN SEMICOLON compound_stmt SEMICOLON

    LPAREN          shift and go to state 62


state 46

    (31) function_declaration -> FUNCTION ID . LPAREN args RPAREN COLON type_base SEMICOLON compound_stmt SEMICOLON

    LPAREN          shift and go to state 63


state 47

    (5) id_list -> id_list COMMA ID .

    SEMICOLON       reduce using rule 5 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 5 (id_list -> id_list COMMA ID .)
    COLON           reduce using rule 5 (id_list -> id_list COMMA ID .)


state 48

    (32) compound_stmt -> BEGIN statement_list END .

    DOT             reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)
    END             reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)
    ID              reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)
    BEGIN           reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)
    IF              reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)
    FOR             reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)
    ELSE            reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)
    SEMICOLON       reduce using rule 32 (compound_stmt -> BEGIN statement_list END .)


state 49

    (33) statement_list -> statement_list statement .

    END             reduce using rule 33 (statement_list -> statement_list statement .)
    ID              reduce using rule 33 (statement_list -> statement_list statement .)
    BEGIN           reduce using rule 33 (statement_list -> statement_list statement .)
    IF              reduce using rule 33 (statement_list -> statement_list statement .)
    FOR             reduce using rule 33 (statement_list -> statement_list statement .)


state 50

    (36) statement -> call_stmt SEMICOLON .

    END             reduce using rule 36 (statement -> call_stmt SEMICOLON .)
    ID              reduce using rule 36 (statement -> call_stmt SEMICOLON .)
    BEGIN           reduce using rule 36 (statement -> call_stmt SEMICOLON .)
    IF              reduce using rule 36 (statement -> call_stmt SEMICOLON .)
    FOR             reduce using rule 36 (statement -> call_stmt SEMICOLON .)
    ELSE            reduce using rule 36 (statement -> call_stmt SEMICOLON .)


state 51

    (37) statement -> assignment_stmt SEMICOLON .

    END             reduce using rule 37 (statement -> assignment_stmt SEMICOLON .)
    ID              reduce using rule 37 (statement -> assignment_stmt SEMICOLON .)
    BEGIN           reduce using rule 37 (statement -> assignment_stmt SEMICOLON .)
    IF              reduce using rule 37 (statement -> assignment_stmt SEMICOLON .)
    FOR             reduce using rule 37 (statement -> assignment_stmt SEMICOLON .)
    ELSE            reduce using rule 37 (statement -> assignment_stmt SEMICOLON .)


state 52

    (45) call_stmt -> ID LPAREN . expression_list RPAREN
    (51) expression_list -> . expression_list COMMA expression
    (52) expression_list -> . expression
    (53) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (56) expression -> . expression GREATER term
    (57) expression -> . expression LESS term
    (58) expression -> . expression GREATEREQUAL term
    (59) expression -> . expression LESSEQUAL term
    (60) expression -> . expression NOTEQUAL term
    (61) term -> . factor
    (62) term -> . term TIMES factor
    (63) term -> . term DIVIDE factor
    (64) factor -> . NUMBER
    (65) factor -> . STRING
    (66) factor -> . call_stmt
    (67) factor -> . LPAREN expression RPAREN
    (45) call_stmt -> . ID LPAREN expression_list RPAREN
    (46) call_stmt -> . ID

    NUMBER          shift and go to state 70
    STRING          shift and go to state 71
    LPAREN          shift and go to state 65
    ID              shift and go to state 64

    expression_list                shift and go to state 66
    expression                     shift and go to state 67
    term                           shift and go to state 68
    factor                         shift and go to state 69
    call_stmt                      shift and go to state 72

state 53

    (44) assignment_stmt -> ID ASSIGN . expression
    (53) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (56) expression -> . expression GREATER term
    (57) expression -> . expression LESS term
    (58) expression -> . expression GREATEREQUAL term
    (59) expression -> . expression LESSEQUAL term
    (60) expression -> . expression NOTEQUAL term
    (61) term -> . factor
    (62) term -> . term TIMES factor
    (63) term -> . term DIVIDE factor
    (64) factor -> . NUMBER
    (65) factor -> . STRING
    (66) factor -> . call_stmt
    (67) factor -> . LPAREN expression RPAREN
    (45) call_stmt -> . ID LPAREN expression_list RPAREN
    (46) call_stmt -> . ID

    NUMBER          shift and go to state 70
    STRING          shift and go to state 71
    LPAREN          shift and go to state 65
    ID              shift and go to state 64

    expression                     shift and go to state 73
    term                           shift and go to state 68
    factor                         shift and go to state 69
    call_stmt                      shift and go to state 72

state 54

    (41) if_stmt -> IF LPAREN . expression RPAREN THEN statement
    (42) if_stmt -> IF LPAREN . expression RPAREN THEN statement ELSE statement
    (53) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (56) expression -> . expression GREATER term
    (57) expression -> . expression LESS term
    (58) expression -> . expression GREATEREQUAL term
    (59) expression -> . expression LESSEQUAL term
    (60) expression -> . expression NOTEQUAL term
    (61) term -> . factor
    (62) term -> . term TIMES factor
    (63) term -> . term DIVIDE factor
    (64) factor -> . NUMBER
    (65) factor -> . STRING
    (66) factor -> . call_stmt
    (67) factor -> . LPAREN expression RPAREN
    (45) call_stmt -> . ID LPAREN expression_list RPAREN
    (46) call_stmt -> . ID

    NUMBER          shift and go to state 70
    STRING          shift and go to state 71
    LPAREN          shift and go to state 65
    ID              shift and go to state 64

    expression                     shift and go to state 74
    term                           shift and go to state 68
    factor                         shift and go to state 69
    call_stmt                      shift and go to state 72

state 55

    (43) for_stmt -> FOR ID . ASSIGN expression TO expression DO statement

    ASSIGN          shift and go to state 75


state 56

    (14) const_list -> const_list ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 76


state 57

    (15) const_list -> ID EQUALS . expression SEMICOLON
    (53) expression -> . term
    (54) expression -> . expression PLUS term
    (55) expression -> . expression MINUS term
    (56) expression -> . expression GREATER term
    (57) expression -> . expression LESS term
    (58) expression -> . expression GREATEREQUAL term
    (59) expression -> . expression LESSEQUAL term
    (60) expression -> . expression NOTEQUAL term
    (61) term -> . factor
    (62) term -> . term TIMES factor
    (63) term -> . term DIVIDE factor
    (64) factor -> . NUMBER
    (65) factor -> . STRING
    (66) factor -> . call_stmt
    (67) factor -> . LPAREN expression RPAREN
    (45) call_stmt -> . ID LPAREN expression_list RPAREN
    (46) call_stmt -> . ID

    NUMBER          shift and go to state 70
    STRING          shift and go to state 71
    LPAREN          shift and go to state 65
    ID              shift and go to state 64

    expression                     shift and go to state 77
    term                           shift and go to state 68
    factor                         shift and go to state 69
    call_stmt                      shift and go to state 72

state 58

    (17) type_list -> type_list ID . EQUALS type_specifier SEMICOLON

    EQUALS          shift and go to state 78


state 59

    (18) type_list -> ID EQUALS . type_specifier SEMICOLON
    (22) type_specifier -> . type_base
    (23) type_specifier -> . ARRAY LBRACKET range RBRACKET OF type_base
    (24) type_specifier -> . STRING LBRACKET NUMBER RBRACKET
    (25) type_base -> . INTEGER
    (26) type_base -> . REAL
    (27) type_base -> . CHAR
    (28) type_base -> . BOOLEAN

    ARRAY           shift and go to state 81
    STRING          shift and go to state 82
    INTEGER         shift and go to state 83
    REAL            shift and go to state 84
    CHAR            shift and go to state 85
    BOOLEAN         shift and go to state 86

    type_specifier                 shift and go to state 79
    type_base                      shift and go to state 80

state 60

    (20) var_list -> var_list id_list . COLON type_specifier SEMICOLON
    (5) id_list -> id_list . COMMA ID

    COLON           shift and go to state 87
    COMMA           shift and go to state 26


state 61

    (21) var_list -> id_list COLON . type_specifier SEMICOLON
    (22) type_specifier -> . type_base
    (23) type_specifier -> . ARRAY LBRACKET range RBRACKET OF type_base
    (24) type_specifier -> . STRING LBRACKET NUMBER RBRACKET
    (25) type_base -> . INTEGER
    (26) type_base -> . REAL
    (27) type_base -> . CHAR
    (28) type_base -> . BOOLEAN

    ARRAY           shift and go to state 81
    STRING          shift and go to state 82
    INTEGER         shift and go to state 83
    REAL            shift and go to state 84
    CHAR            shift and go to state 85
    BOOLEAN         shift and go to state 86
